# atelier

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  code_agent.py  execution.py  file_agent.py  orchestrator.py  registry.py  search_agent.py  writer_agent.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: __init__.py  browse.py  chat.py  file.py  health.py  note.py  system.py  workspace.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/llm/: client.py  generation.py
backend/app/models/: __init__.py  chat.py  chunk.py  file.py  memory.py  message.py  note.py  workspace.py
backend/app/schemas/: agent.py  chat.py  file.py  health.py  message.py  note.py  system.py  workspace.py
backend/app/services/: chat.py  chunker.py  file.py  indexer.py  memory.py  note.py  scanner.py  vector_store.py  workspace.py
backend/app/tools/: __init__.py  code_tools.py  file_tools.py  memory_tools.py  registry.py  search_tools.py  writer_tools.py
backend/tests/: conftest.py  test_agent_base.py  test_chat.py  test_chunker.py  test_code_agent.py  test_file.py  test_file_agent.py  test_file_tools.py  test_health.py  test_llm_tools.py  test_memory.py  test_message.py  test_note.py  test_orchestrator.py  test_search_agent.py  test_system.py  test_tool_registry.py  test_vector_store.py  test_workspace.py  test_writer_agent.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
(+20 files in other folders)
