[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atelier-backend"
version = "0.1.0"
description = "Atelier — local-first multi-agent copilot backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "sqlalchemy>=2.0.39,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "chromadb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "pytest>=8.3.5,<9.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
